--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.diandian.pdd.diandiancha">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".baseactivity.MyApplication"
@@ -26,7 +27,8 @@
         </activity>
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.RegistrActivity" />
-        <activity android:name=".admin.AdminActivity"></activity>
+        <activity android:name=".admin.AdminActivity" />
+        <activity android:name=".login.SellerActivity"></activity>
     </application>
 
 </manifest>
