--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.diandian.pdd.diandiancha">
 
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".baseactivity.MyApplication"
@@ -27,8 +26,8 @@
         </activity>
         <activity android:name=".login.LoginActivity" />
         <activity android:name=".login.RegistrActivity" />
-        <activity android:name=".admin.AdminActivity" />
-        <activity android:name=".login.SellerActivity"></activity>
+        <activity android:name=".admin.AdminActivity"/>
+        <activity android:name=".user.UserActivity"/>
     </application>
 
 </manifest>
