--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,16 @@
     package="com.diandian.pdd.diandiancha">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:name=".baseactivity.MyApplication"
@@ -28,6 +38,8 @@
         <activity android:name=".login.RegistrActivity" />
         <activity android:name=".admin.AdminActivity"/>
         <activity android:name=".user.UserActivity"/>
+        <activity android:name=".sellerview.SellerActivity" />
+        <activity android:name=".sellerview.SellerAddWaresActivity"/>
     </application>
 
 </manifest>
